add example for spring boot starter scheduler integration
